--- a/slides/u1-3-review/u2-review-starter-TEST.Rmd
+++ b/slides/u1-3-review/u2-review-starter-TEST.Rmd
@@ -40,6 +40,8 @@ glimpse(solubility_hardness)
 
 density has 3 rows and 2 columns, site_descriptions has 10 rows and 2 columns, solubility_hardness has 3 rows and 3 columns
 
+In `density` each row is the density of a particular mineral In `site_descriptions` each row is information about the location of a site In `solubility_hardness` each row is the solubility and hardness for a particular mineral
+
 ### Exercise 3
 
 Remove this text, and add your answer for Exercise 3 here.
