--- a/slides/u1-3-review/u1-u2-u3-review.Rmd
+++ b/slides/u1-3-review/u1-u2-u3-review.Rmd
@@ -133,6 +133,12 @@ Remember:
 
 ---
 
+class: middle
+
+# Exercise 1 Solution
+
+---
+
 ## Exercise 2: Inspect the other three data frames
 
 Under Exercise 2 in your starter file:
@@ -143,6 +149,23 @@ Under Exercise 2 in your starter file:
 3. Add text narrative below the chunk stating the number of rows and variables for each data frame
 4. Add text stating what each row is (exactly!) in each data frame
 5. Add a fourth, fifth, and sixth line of code within the original code chunk that outputs the variable names
+
+Remember: 
+- 1 person: Edit, knit, commit, push
+- Everyone: Pull changes and inspect
+- Next person: Edit, knit commit push...
+
+---
+
+## Exercise 3: Join `density` to `sand_minerals`, then join `solubility_hardness`
+
+Under Exercise 3 in your starter file:
+
+1. Delete existing text, insert and label a code chunk named `join-minerals-density`
+2. Write a pipeline to to join `density` to `sand_mineral`, retaining all rows in `sand_minerals`
+3. Assign the output to a new data frame object named `sand_mineral_density`
+4. Write a pipeline to to join `solubility_hardness` to `sand_mineral_density`, retaining all rows in `sand_minerals`
+5. Assign the output to a new data frame object named `sand_mineral_properties`
 
 Remember: 
 - 1 person: Edit, knit, commit, push
