finalized slided for unit 4 data types and classes

--- a/slides/u2-d10-data-types/u2-d10-data-types.Rmd
+++ b/slides/u2-d10-data-types/u2-d10-data-types.Rmd
@@ -451,3 +451,13 @@ typeof(c(1, "a"))
 ]
 ]
 
+---
+
+.center[
+.large[
+This class content was built from the Data Science in a Box source materials.
+https://datasciencebox.org/index.html
+]
+]
+
+
