--- a/slides/u2-d11-data-classes/u2-d11-data-classes.Rmd
+++ b/slides/u2-d11-data-classes/u2-d11-data-classes.Rmd
@@ -16,6 +16,7 @@ output:
 
 ```{r packages, echo=FALSE, message=FALSE, warning=FALSE}
 library(tidyverse)
+library(openintro)
 library(DT)
 library(scales)
 
@@ -33,39 +34,43 @@ class: middle
 
 We talked about *types* so far, next we'll introduce the concept of *classes*
 
-- Vectors are like Lego building blocks
+**Vectors** - we have covered
+
+*   factors
+*   dates
+*   data frames
+*   lists
 
 --
-- We stick them together to build more complicated constructs, e.g. *representations of data*
-
---
-- The **class** attribute relates to the S3 class of an object which determines its behaviour
-  - You don't need to worry about what S3 classes really mean, but you can read more about it [here](https://adv-r.hadley.nz/s3.html#s3-classes) if you're curious
-
---
-- Examples: factors, dates, and data frames
+- You can read more about classes and the underlying R logic [here](https://adv-r.hadley.nz/s3.html#s3-classes) if you're curious
   
 ---
 
 ## Factors
 
-R uses factors to handle categorical variables, variables that have a fixed and known set of possible values
+R uses factors to handle categorical variables.
+
+Categorical variables have a fixed and known set of possible "levels" (integer values)
+
+#### Example: Degree Type
 
 ```{r}
-x <- factor(c("BS", "MS", "PhD", "MS"))
-x
+degrees <- factor(c("BS", "MS", "PhD", "MS"))
+degrees
 ```
+
+What is the data type of degrees? 
 
 --
 
 .pull-left[
 ```{r}
-typeof(x)
+typeof(degrees)
 ```
 ]
 .pull-right[
 ```{r}
-class(x)
+class(degrees)
 ```
 ]
 
@@ -74,20 +79,32 @@ class(x)
 
 ## More on factors
 
-We can think of factors like character (level labels) and an integer (level numbers) glued together
+Factors **combine** character information with integers:
+
+*   Character information becomes **level labels**
+*   Integer information become the **level numbers** 
 
 ```{r}
-glimpse(x)
-as.integer(x)
+glimpse(degrees)
+as.integer(degrees)
 ```
+
+**R will automatically assign categories to levels alphabetically, but we can over-ride that!**
 
 ---
 
 ## Dates
 
 ```{r}
-y <- as.Date("2020-01-01")
+y <- as.Date("2020-01-01") # typically YYYY-MM-DD format
 y
+```
+
+What is the type of a date class object/variable?
+
+--
+
+```{r}
 typeof(y)
 class(y)
 ```
@@ -96,7 +113,9 @@ class(y)
 
 ## More on dates
 
-We can think of dates like an integer (the number of days since the origin, 1 Jan 1970) and an integer (the origin) glued together
+Dates in R are all relative to an "origin" which was January 1, 1970. 
+
+Therefore all dates are treated like an integer (the number of days since the origin, 1 Jan 1970) and an integer (the origin) glued together
 
 ```{r}
 as.integer(y)
@@ -107,12 +126,16 @@ as.integer(y) / 365 # roughly 50 yrs
 
 ## Data frames
 
-We can think of data frames like like vectors of equal length glued together
+Data frames are vectors of equal length glued together. We've already worked with data frames a lot!
 
 ```{r}
-df <- data.frame(x = 1:2, y = 3:4)
-df
+df <- starwars
+head(df, 5)
 ```
+
+What is the type of a data frame class object?
+
+--
 
 .pull-left[
 ```{r}
@@ -127,31 +150,34 @@ class(df)
 
 ---
 
-## Lists
+## Lists (and data frames)
 
-Lists are a generic vector container vectors of any type can go in them
+Lists can combine multiple vectors of **any type and any length!**
 
 ```{r}
 l <- list(
   x = 1:4,
-  y = c("hi", "hello", "jello"),
+  y = c("eaes", "494", "fall", "2021"),
   z = c(TRUE, FALSE)
 )
 l
 ```
 
+--
+
+- **In contrast:** A data frame is a **special list**, containing vectors of equal length
+
 ---
 
-## Lists and data frames
+## Pull a vector from a data frame
 
-- A data frame is a special list containing vectors of equal length
 - When we use the `pull()` function, we extract a vector from the data frame
 
 ```{r}
-df
+head(df, 3)
 
 df %>%
-  pull(y)
+  pull(name) #<<
 ```
 
 
@@ -187,13 +213,18 @@ ggplot(cat_lovers, mapping = aes(x = handedness)) +
 
 ## Use forcats to manipulate factors
 
+The `{forcats}` package gives us functions **"for categorical data"** 
+
 ```{r out.width="30%"}
 cat_lovers %>%
   mutate(handedness = fct_infreq(handedness)) %>% #<<
   ggplot(mapping = aes(x = handedness)) +
-  geom_bar() +
-  my_theme
+  geom_bar() + my_theme
 ```
+
+--
+
+What does the `fct_infreq()` function do?
 
 ---
 
@@ -209,16 +240,12 @@ knitr::include_graphics("img/forcats-part-of-tidyverse.png")
 ]
 
 .pull-left-wide[
-- Factors are useful when you have true categorical data and you want to override the ordering of character vectors to improve display
+- Factors are useful when you want to override the alphabetical ordering of character vectors (for example during plotting)
 - They are also useful in modeling scenarios
 - The **forcats** package provides a suite of useful tools that solve common problems with factors
 ]
 
 ---
-
-```{r echo=FALSE, message = FALSE, warning = FALSE}
-hotels <- readr::read_csv("https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2020/2020-02-11/hotels.csv")
-```
 
 class: middle
 
@@ -234,68 +261,69 @@ knitr::include_graphics("img/lubridate-not-part-of-tidyverse.png")
 ```
 ]
 .pull-right[
-- **lubridate** is the tidyverse-friendly package that makes dealing with dates a little easier
-- It's not one of the *core* tidyverse packages, hence it's installed with `install.packages("tidyverse)` but it's not loaded with it, and needs to be explicitly loaded with `library(lubridate)`
+- **lubridate** is the tidyverse-friendly package for dates
+- It's not a *core* tidyverse package!
+- Install with `install.packages("tidyverse)` BUT: you need to use `library(lubridate)` to load it separately!
 ]
 
 ---
 
 class: middle
 
-.hand[.light-blue[
-we're just going to scratch the surface of working with dates in R here...
-]]
+### we're just going to scratch the surface of working with dates in R here...
 
 ---
 
-.question[
-Calculate and visualise the number of bookings on any given arrival date.
-]
+## Step 1a. Look at date related columns
 
-```{r}
-hotels %>%
-  select(starts_with("arrival_"))
+Notice we don't have a single date variable. It's spread aross `year`, `month` and `day`. How do you map three variables to an x-axis?
+
+```{r message = FALSE, warning = FALSE}
+glimpse(earthquakes)
 ```
 
 ---
 
-## Step 1. Construct dates
+## Step 1b. Construct dates
+
+Let's try just glueing together a full date as a character string (factor).
 
 .midi[
-```{r output.lines=7}
+```{r output.lines=7, echo = FALSE, message = FALSE}
 library(glue)
 
-hotels %>%
+earthquakes %>%
   mutate(
-    arrival_date = glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}") #<<
+    date = glue("{year} {month} {day}") #<<
     ) %>% 
-  relocate(arrival_date)
+  relocate(date)
 ```
 ]
 
 ---
 
-## Step 2. Count bookings per date
+## Step 2. Count based on date 
 
 .midi[
 ```{r}
-hotels %>%
-  mutate(arrival_date = glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}")) %>%
-  count(arrival_date)
+earthquakes %>%
+  mutate(date = glue("{year} {month} {day}")) %>%
+  count(date) %>% #<<
+  arrange(desc(n)) #<<
 ```
 ]
 
 ---
 
-## Step 3. Visualise bookings per date
+## Step 3. Visualise bookings over time, using date on x-axis
 
 .midi[
 ```{r out.width="80%", fig.asp = 0.4}
-hotels %>%
-  mutate(arrival_date = glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}")) %>%
-  count(arrival_date) %>%
-  ggplot(aes(x = arrival_date, y = n, group = 1)) +
-  geom_line()
+earthquakes %>%
+  mutate(date = glue("{year} {month} {day}")) %>%
+  ggplot(aes(x = date, y = richter)) + #<<
+  geom_point() + #<<
+  my_theme
 ```
 ]
 
@@ -304,72 +332,88 @@ hotels %>%
 .hand[zooming in a bit...]
 
 .question[
-Why does the plot start with August when we know our data start in July? And why does 10 August come after 1 August?
+What is weird here?
+]
+
+```{r out.width="80%", echo=FALSE, fig.asp = 0.5}
+earthquakes %>%
+  mutate(date = glue("{year} {month} {day}")) %>%
+  slice(20:35) %>% 
+  ggplot(aes(x = date, y = richter)) +
+  geom_point() +
+  my_theme +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1))
+```
+
+---
+
+## Step 1. *REVISED* Construct dates **"as dates"**
+
+.midi[
+```{r message = FALSE}
+library(lubridate)
+
+earthquakes %>%
+  mutate(
+    date = ymd(glue("{year} {month} {day}")) #<< # wrap in ymd() function!
+    ) %>% 
+  relocate(date) #<<
+```
+]
+
+---
+
+## Step 2. Count based on date 
+
+.midi[
+```{r}
+earthquakes %>%
+  mutate(date = ymd(glue("{year} {month} {day}"))) %>% 
+  count(date) %>% #<<
+  arrange(desc(n)) #<<
+```
+]
+
+---
+
+## Step 3a. Visualise earthquakes by date
+
+.midi[
+```{r out.width="80%", fig.asp = 0.4}
+earthquakes %>%
+  mutate(date = ymd(glue("{year} {month} {day}"))) %>%
+  ggplot(aes(x = date, y = richter)) + #<<
+  geom_point() + #<<
+  my_theme 
+```
+]
+
+---
+
+.hand[zooming in a bit...]
+
+.question[
+Did if fix the problem if we zoom in?
 ]
 
 .midi[
 ```{r out.width="80%", echo=FALSE, fig.asp = 0.4}
-hotels %>%
-  mutate(arrival_date = glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}")) %>%
-  count(arrival_date) %>%
-  slice(1:7) %>%
-  ggplot(aes(x = arrival_date, y = n, group = 1)) +
-  geom_line()
+earthquakes %>%
+  mutate(date = ymd(glue("{year} {month} {day}"))) %>%
+  filter(year == 1933) %>% #<<
+  ggplot(aes(x = date, y = richter)) + #<<
+  geom_point() +
+  my_theme 
 ```
 ]
+
 
 ---
 
-## Step 1. *REVISED* Construct dates "as dates"
-
-.midi[
-```{r output.lines=7}
-library(lubridate)
-
-hotels %>%
-  mutate(
-    arrival_date = ymd(glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}")) #<<
-    ) %>% 
-  relocate(arrival_date)
-```
+.center[
+.large[
+This class content was built from the Data Science in a Box source materials.
+https://datasciencebox.org/index.html
+]
 ]
 
----
-
-## Step 2. Count bookings per date
-
-.midi[
-```{r}
-hotels %>%
-  mutate(arrival_date = ymd(glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}"))) %>% 
-  count(arrival_date)
-```
-]
-
----
-
-## Step 3a. Visualise bookings per date
-
-.midi[
-```{r out.width="80%", fig.asp = 0.4}
-hotels %>%
-  mutate(arrival_date = ymd(glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}"))) %>% 
-  count(arrival_date) %>%
-  ggplot(aes(x = arrival_date, y = n, group = 1)) +
-  geom_line()
-```
-]
-
----
-
-## Step 3b. Visualise using a smooth curve
-
-.midi[
-```{r out.width="80%", fig.asp = 0.4, message = FALSE}
-hotels %>%
-  mutate(arrival_date = ymd(glue("{arrival_date_year} {arrival_date_month} {arrival_date_day_of_month}"))) %>% 
-  count(arrival_date) %>%
-  ggplot(aes(x = arrival_date, y = n, group = 1)) +
-  geom_smooth() #<<
-```
-]
