--- a/labs/lab-04-type-coercion/lab-04-type-coercion.Rmd
+++ b/labs/lab-04-type-coercion/lab-04-type-coercion.Rmd
@@ -74,6 +74,8 @@ c(1, 1L, "C")
 #typeof(c(1, 1L, "C"))
 ```
 
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
+
 2.  Copy the next two code chunks below into Exercise 2 in your Lab 04 starter file. Beneath the **first** code chunk, add text narrative to state what the data type is for each object. Then, uncomment the code (remove `#`) in the **second** code chunk, and add text narrative stating and *explaining* the data type of the vector.
 
 -   Vector `c(1:3, 5)`
@@ -86,6 +88,8 @@ c(1, 1L, "C")
 ```{r echo = F}
 #typeof(c(1:3, 5))
 ```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
 
 3.  Copy the next two code chunks below into Exercise 3 in your Lab 04 starter file. Beneath the **first** code chunk, add text narrative to state what the data type is for each object. Then, uncomment the code (remove `#`) in the **second** code chunk, and add text narrative stating and *explaining* the data type of the vector.
 
@@ -101,6 +105,8 @@ T
 #typeof(c(3, FALSE, T))
 ```
 
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
+
 4.  Copy the next two code chunks below into Exercise 4 in your Lab 04 starter file. Beneath the **first** code chunk, add text narrative to state what the data type is for each object. Then, uncomment the code (remove `#`) in the **second** code chunk, and add text narrative stating and *explaining* the data type of the vector.
 
 -   Vector `c(TRUE, as.numeric(TRUE))`
@@ -113,6 +119,8 @@ as.numeric(TRUE)
 ```{r echo = F}
 #typeof(c(TRUE, as.numeric(TRUE)))
 ```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
 
 5.  Copy the next two code chunks below into Exercise 5 in your Lab 04 starter file. Beneath the **first** code chunk, add text narrative to state what the data type is for each object. Then, uncomment the code (remove `#`) in the **second** code chunk, and add text narrative stating and *explaining* the data type of the vector.
 
@@ -127,6 +135,8 @@ as.logical(1)
 ```{r echo = F}
 #typeof(c(NA, FALSE, as.logical(1)))
 ```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
 
 6.  Copy the next two code chunks below into Exercise 6 in your Lab 04 starter file. Beneath the **first** code chunk, add text narrative to state what the data type is for each object (*include the numerator and denominator of the division, separately, as well as the overall division operation together*). Then, uncomment the code (remove `#`) in the **second** code chunk, and add text narrative stating and *explaining* the data type of the vector.
 
@@ -143,6 +153,8 @@ as.logical(1)
 #typeof(c(1L / 0, "A"))
 ```
 
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
+
 ## Last 4 Exercises: With "real" data
 
 7.  Write and label a code chunk below exercise 7 in your starter file that gives you a "glimpse" of the `earthquakes` dataset.
@@ -152,10 +164,9 @@ as.logical(1)
 
 9.  What problems would this coercion cause if we tried to recreate the plot from Homework 1 which mapped year to the x-axis and magnitude to the y-axis?
 
-10. Copy the code chunk below into exercise 10 in your starter file, then label and complete it!
-    This pipeline **1)** creates a new variable called `major` which takes on the value `TRUE` for `richter > 7.5`; **2)** coerces the new variable to type numeric; and **3)** filters only for the major earthquakes.
-    Remember to set eval = T to knit your starter file.
-    **How many major earthquakes are there in this dataset?**
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
+
+10. Copy the code chunk below into exercise 10 in your starter file, then label and complete it! This pipeline **1)** creates a new variable called `major` which takes on the value `TRUE` for `richter > 7.5`; **2)** coerces the new variable to type numeric; and **3)** filters only for the major earthquakes. Remember to set eval = T to knit your starter file. **How many major earthquakes are there in this dataset?**
 
 ```{r label-me, eval = F}
 ___ %>% 
@@ -166,3 +177,5 @@ ___ %>%
   mutate(___ = as.numeric(___)) %>% 
   filter(___ == ___)
 ```
+
+🧶 ✅ ⬆️ Knit, *commit, and push your changes to GitHub with an appropriate commit message.*
