--- a/starters/hw/hw-04-classes-forcats-starter/hw-04-rubric.Rmd
+++ b/starters/hw/hw-04-classes-forcats-starter/hw-04-rubric.Rmd
@@ -11,6 +11,7 @@ output: html_document
 library(tidyverse)
 library(openintro) 
 library(lubridate)
+library(glue)
 ```
 
 ## Exercises
@@ -54,28 +55,111 @@ my_list <- list("numeric" = numeric, "character" = character, "mixed" = mixed)
 my_list
 ```
 
-the `list()` function can concatenate vectors of different length
+the `list()` function creates a list from several objects, and can concatenate vectors of different length.
 
 ### Exercise 5
 
-Remove this text, and add your answer for Exercise 5 here.
+```{r earthquakes-factors}
+earthquakes %>% 
+  ggplot(aes(x = month)) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+When `month` is mapped to the x-axis within ggplot it is converted from characters to factors.
+The resulting visualization has an unnatural ordering (from April to September) because factor levels (e.g., 1-12 for months of the year) are assigned in alphabetical order by default.
 
 ### Exercise 6
 
-Remove this text, and add your answer for Exercise 6 here.
+```{r earthquakes-forcats-1}
+earthquakes %>% 
+  ggplot(aes(x = fct_infreq(month))) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+`fct_infreq` is being used to order the month factor levels in descending order of frequency.
+
+```{r earthquakes-forcats-2}
+earthquakes %>% 
+  ggplot(aes(x = fct_rev(month))) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+`fct_rev` is being used to reverse the alphabetical (default) order of the month levels
+
+```{r earthquakes-forcats-3}
+earthquakes %>% 
+  ggplot(aes(x = fct_inorder(month))) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+`fct_inorder` is being used to order the month factor levels according to their order of appearance in the month variable (i.e. from first to last rows)
+
+```{r earthquakes-forcats-4}
+earthquakes %>% 
+  ggplot(aes(x = month %>% fct_infreq() %>% fct_rev())) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+`fct_infreq` and `fct_rev` is being used to first order the month levels in order of *ascending* frequency
+
+```{r earthquakes-forcats-5}
+earthquakes %>% 
+  mutate(month = fct_recode(month,
+                            "1" = "January",
+                            "2" = "February",
+                            "3" = "March",
+                            "4" = "April",
+                            "5" = "May",
+                            "6" = "June",
+                            "7" = "July",
+                            "8" = "August",
+                            "9" = "September",
+                            "10" = "October",
+                            "11" = "November",
+                            "12" = "December")) %>% 
+  ggplot(aes(x = month %>% as.numeric() %>% factor())) +
+  geom_bar() +
+  labs(x = "Month of the year", y = "Earthquake count")
+```
+
+`fct_recode` is being used to recode the months as character string numbers from 1-12, then these character strings are converted to numeric, then to factor to reorder the factors using the numeric sequence.
 
 ### Exercise 7
 
-Remove this text, and add your answer for Exercise 7 here.
+```{r earthquake-dates}
+earthquakes_new <- earthquakes %>% 
+  mutate(date = glue("{year} {month} {day}")) %>% 
+  relocate(date)
+print(earthquakes_new)
+```
+
+The second line of code uses mutate to create a new variable `date`.
+Date is created by glueing together the year, month, and day variables.
+Relocate on line 3 moves date to the first column position in the data frame.
+The new variable `date` is of type `typeof(earthquakes_new$date)` and of class `class(earthquakes_new$date)`.
 
 ### Exercise 8
 
-Remove this text, and add your answer for Exercise 8 here.
+```{r earthquakes-dates-viz}
+earthquakes_new %>% 
+  filter(year == 1933) %>% 
+  ggplot(aes(x = date, y = richter)) +
+  geom_point()
+```
+
+This plot has the incorrect (alphabetical) month ordering because the factor levels for the dates were assigned alphabetically, therefore August comes before March.
 
 ### Exercise 9
 
-Remove this text, and add your answer for Exercise 9 here.
-
-### Exercise 10
-
-Remove this text, and add your answer for Exercise 10 here.
+```{r earthquakes-dates2, eval = T}
+earthquakes %>% 
+  mutate(date = ymd(glue("{year} {month} {day}"))) %>% 
+  relocate(date) %>% 
+  ggplot(aes(x = date, y = richter)) +
+  geom_point() 
+```
